<resources>
    <string name="app_name">Posture Reminder</string>
    <string name="home_label">Home</string>
    <string name="account_label">Account</string>
    <string name="create_reminder_label">New reminder</string>
    <string name="explore_label">Explore</string>
    <string name="rankings_label">Rankings</string>
    <string name="ticket_label">Ticket</string>
    <string name="settings_label">Settings</string>
    <string name="reminders_label">Reminders</string>
    <string name="battery_optimization_label">Battery optimization</string>
    <string name="top_rankings_label">Top 30 rankings by level</string>
    <string name="credits_label">Credits</string>
    <string name="action_done">Done</string>
    <string name="action_delete">Delete</string>
    <string name="action_undo">Undo</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_finish">Finish</string>
    <string name="action_disable">Disable</string>
    <string name="action_continue">Continue</string>
    <string name="action_close_keyboard">Close keyboard</string>
    <string name="action_start">Start</string>
    <string name="action_select">Select</string>
    <string name="action_selected">Selected</string>
    <string name="action_exit">Exit</string>
    <string name="action_give_permission">Give permission</string>
    <string name="action_yes">Yes</string>
    <string name="action_login">Login</string>
    <string name="action_off">Turn off</string>
    <string name="action_on">Turn on</string>
    <string name="action_delete_account">Delete account</string>
    <string name="action_edit">Edit</string>
    <string name="action_understood">Understood</string>
    <string name="action_skip">Skip</string>
    <string name="help_login_problems">Problems with login?</string>
    <string name="snack_fail_login">Login canceled, connection error or a google account was not found on the device.</string>
    <string name="fast_login">Quick login</string>
    <string name="action_continue_anonymously">Continue anonymously</string>
    <string name="action_login_with_google">Login with google</string>
    <string name="internal_login_title">Your adventure starts here</string>
    <string name="internal_login_subtitle">Benefits include:</string>
    <string name="internal_login_alert">Your data will always be safe.</string>
    <string name="login_feature_1_title">Join Us</string>
    <string name="login_feature_1_content">Be a part of our community.</string>
    <string name="login_feature_2_title">Rankings</string>
    <string name="login_feature_2_content">Public profile to climb the leaderboards.</string>
    <string name="login_feature_3_title">Backups</string>
    <string name="login_feature_3_content">Automatic data backup in the cloud.</string>
    <string name="login_feature_4_title">Support</string>
    <string name="login_feature_4_content">Submit support tickets.</string>
    <string name="welcome_pager_title1">Get to the top of the ladder!</string>
    <string name="welcome_pager_title2">Say goodbye to back pain!</string>
    <string name="welcome_pager_title3">We are always with you!</string>
    <string name="stop_alarm">Stop</string>
    <string name="start_alarm">Start</string>
    <string name="snack_alarms_off">The alarm has been deactivated.</string>
    <string name="today_pager">Today</string>
    <string name="yesterday_pager">Yesterday</string>
    <string name="updated_version">Updated to v%1$s</string>
    <string name="whats_new">What\'s new</string>
    <string name="battery_optimization_step_one_light"><![CDATA[<font color=\'#C0C0C4\'>1 - Search </font><b><font color=\'#ffffff\'>Posture Reminder</font></b><font color=\'#C0C0C4\'> from the list</font>]]></string>
    <string name="battery_optimization_step_two_light"><![CDATA[<font color=\'#C0C0C4\'>2 - Select </font><b><font color=\'#ffffff\'> not optimize</font></b><font color=\'#C0C0C4\'> the battery</font>]]></string>
    <string name="battery_optimization_step_one_dark"><![CDATA[<font color=\'#757575\'>1 - Search </font><b><font color=\'#000000\'>Posture Reminder</font></b><font color=\'#757575\'> from the list</font>]]></string>
    <string name="battery_optimization_step_two_dark"><![CDATA[<font color=\'#757575\'>2 - Select </font><b><font color=\'#000000\'> not optimize </font></b><font color=\'#757575\'> the battery</font>]]></string>
    <string name="optimization_correct">All in order</string>
    <string name="optimization_require_action">Requires action</string>
    <string name="status">Status:</string>
    <string name="battery_optimization_alert2">* This is not mandatory, but not all notifications may be executed.</string>
    <string name="battery_optimization_alert1">For a better functioning of the application we ask you to disable the battery optimization in relation to our application.</string>
    <string name="snack_delete_reminder_success">Reminder deleted successfully</string>
    <string name="days">Days</string>
    <string name="start_time">Start at</string>
    <string name="end_time">End at</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="color_picker_title">Reminder color</string>
    <string name="vibration_picker_title">Vibration pattern</string>
    <string name="sound_tone_item_none">None</string>
    <string name="sound_picker_title">Sound picker</string>
    <string name="snack_create_reminder_success">Reminder set correctly</string>
    <string name="interval">Interval</string>
    <string name="snack_active_reminder_not_found">No active reminder found.</string>
    <string name="name_required">Name*</string>
    <string name="interval_required">Interval*</string>
    <string name="days_required">Days*</string>
    <string name="start_time_required">Start at*</string>
    <string name="end_time_required">End at*</string>
    <string name="snack_reminder_not_valid">Fill in all the required data, marked with a \' * \'</string>
    <string name="create_reminder_interval_summary">Select the interval</string>
    <string name="create_reminder_days_summary">Select the days</string>
    <string name="create_reminder_start_summary">Select the start time</string>
    <string name="create_reminder_end_summary">Select the end time</string>
    <string name="create_reminder_name_summary">Select the name</string>
    <string name="select_another_reminder">Select another</string>
    <string name="items_required_for_reminder_alert">* Items required to create the reminder</string>
    <string name="reminder_name_selector_subtitle">How are we calling this?</string>
    <string name="reminder_name_selector_hint">At work</string>
    <string name="end_time_title">Ending time</string>
    <string name="start_time_title">Starting time</string>
    <string name="alarm_days_title">Days enabled</string>
    <string name="time_interval_title">Time interval</string>
    <string name="time_hint">Time</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="time_unit_title">What time unit would you like to use?</string>
    <string name="snack_time_interval_cant_be_zero">The time interval can\'t be 0.</string>
    <string name="time_interval_subtitle">Select how often do you want to get notified</string>
    <string name="reminder_name_hint">Name of the reminder</string>
    <string name="account_sync_in_progress">Synchronizing account</string>
    <string name="account_sync_success">Synchronized correctly</string>
    <string name="account_sync_error">Synchronization failed</string>
    <string name="snack_panda_unlocked">Panda unlocked! Go back to the main screen to enjoy his cuteness!</string>
    <string name="change_name_title">Change the name</string>
    <string name="change_name_subtitle">Enter the new name to change</string>
    <string name="snack_edit_username_success">Name updated successfully</string>
    <string name="help">Help</string>
    <string name="contact">Contact</string>
    <string name="about_us">App</string>
    <string name="theme">Theme</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="questions">Questions</string>
    <string name="website">Website</string>
    <string name="github" translatable="false">Github</string>
    <string name="version">Version</string>
    <string name="version_name">Version %1$s</string>
    <string name="rate_us">Rate us</string>
    <string name="battery_optimization_abbreviation">Battery mode</string>
    <string name="enable_sound_action">Enables sound for this action</string>
    <string name="enable_exp_sound_title">Exp claimed sound</string>
    <string name="enable_exercise_sound_title">Exercise finished sound</string>
    <string name="ticket_feedback">Ticket /Feedback</string>
    <string name="human">Human</string>
    <string name="create_ticket">Create a ticket</string>
    <string name="got_to_website">Visit website</string>
    <string name="see_the_code">See the code</string>
    <string name="rate_the_app">Rate the app</string>
    <string name="read_the_faq">Read the F.A.Q.</string>
    <string name="log_out_summary">Log out from app</string>
    <string name="log_in_summary">Log in to app</string>
    <string name="open_source_licenses">Open source licenses</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="delete_account_summary">Delete account</string>
    <string name="snack_account_deleted_success">Account deleted successfully.</string>
    <string name="account_pref_summary">Theme, account configurations</string>
    <string name="help_pref_summary">Frequently asked questions, tickets</string>
    <string name="contact_pref_summary">Get in touch</string>
    <string name="app_pref_summary">Version, credits, policies</string>
    <string name="pref_faq_url" translatable="false">https://posture-reminder-web.vercel.app/help.html</string>
    <string name="pref_github_url" translatable="false">https://github.com/puntogris/posture-reminder</string>
    <string name="pref_app_website_url" translatable="false">https://posture-reminder-web.vercel.app</string>
    <string name="pref_play_store_uri" translatable="false">market://details?id=com.puntogris.posture</string>
    <string name="pref_play_store_web_url" translatable="false">https://play.google.com/store/apps/details?id=com.puntogris.posture</string>
    <string name="pref_privacy_policy_url" translatable="false">https://posture-reminder-web.vercel.app/privacy-policy.html</string>
    <string name="pref_terms_and_conditions_url" translatable="false">https://posture-reminder-web.vercel.app/terms-and-conditions.html</string>
    <string name="pref_credits_url" translatable="false">https://posture-reminder-web.vercel.app/credits.html</string>
    <string name="delete_account_email_required_alert">As a safety precaution we will ask you to type the email you used in your registration or google account in your phone.</string>
    <string name="delete_account_danger_alert">Danger zone! This will delete your account, erase all your data locally, in the cloud and log you out. This action is irreversible.</string>
    <string name="name">Name</string>
    <string name="account_email">account email</string>
    <string name="open_picker_content_description">Open alarm</string>
    <string name="rate_app_title">Checkpoint</string>
    <string name="rate_app_content">We noticed that you have been regularly using the app, leveling up and making progress!\n\nWe invite you to leave us a review if the app helped you or create a ticket if you had a problem.\n\nThis helps us improve so more people can enjoy it like you.</string>
</resources>