<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.puntogris.posture.ui.login.InternalLoginFragment">

    <TextView
        android:id="@+id/textView_login_title"
        style="@style/Theme.Posture.MediumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_4"
        android:text="@string/log_in"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_login_subtitle"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_2"
        android:layout_marginEnd="@dimen/spacing_4"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/internal_login_subtitle"
        android:textColor="?colorPrimary"
        android:textSize="@dimen/text_sm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textView_login_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_google_login"
        style="@style/Theme.Posture.Button"
        android:layout_width="match_parent"
        android:text="@string/action_login_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/spacing_4"
        android:text="@string/internal_login_alert"
        android:textSize="@dimen/text_sm"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/button_google_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_join_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_4"
        android:layout_marginTop="@dimen/spacing_8"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_feature_1_title"
        android:textSize="@dimen/text_md"
        app:layout_constraintStart_toEndOf="@+id/imageView_join_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_subtitle" />

    <TextView
        android:id="@+id/textView_join_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_feature_1_content"
        app:layout_constraintStart_toStartOf="@+id/textView_join_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_join_title" />

    <TextView
        android:id="@+id/textView_rankings_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_4"
        android:layout_marginTop="@dimen/spacing_6"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_feature_2_title"
        android:textSize="@dimen/text_md"
        app:layout_constraintStart_toEndOf="@+id/imageView_rankings_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_join_subtitle" />

    <TextView
        android:id="@+id/textView_rankings_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_feature_2_content"
        app:layout_constraintStart_toStartOf="@+id/textView_rankings_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_rankings_title" />

    <TextView
        android:id="@+id/textView_backup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_4"
        android:layout_marginTop="@dimen/spacing_6"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_feature_3_title"
        android:textSize="@dimen/text_md"
        app:layout_constraintStart_toEndOf="@+id/imageView_backup_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_rankings_subtitle" />

    <TextView
        android:id="@+id/textView_backup_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_feature_3_content"
        app:layout_constraintStart_toStartOf="@+id/textView_backup_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_backup_title" />

    <TextView
        android:id="@+id/textView_help_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_4"
        android:layout_marginTop="@dimen/spacing_6"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/login_feature_4_title"
        android:textSize="@dimen/text_md"
        app:layout_constraintStart_toEndOf="@+id/imageView_help_icon"
        app:layout_constraintTop_toBottomOf="@+id/textView_backup_subtitle" />

    <TextView
        android:id="@+id/textView_help_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_feature_4_content"
        app:layout_constraintStart_toStartOf="@+id/textView_help_title"
        app:layout_constraintTop_toBottomOf="@+id/textView_help_title" />

    <ImageView
        android:id="@+id/imageView_join_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing_4"
        app:layout_constraintBottom_toBottomOf="@+id/textView_join_subtitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView_join_title"
        app:srcCompat="@drawable/ic_users_three"
        app:tint="?colorControlNormal" />

    <ImageView
        android:id="@+id/imageView_rankings_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView_rankings_subtitle"
        app:layout_constraintStart_toStartOf="@+id/imageView_join_icon"
        app:layout_constraintTop_toTopOf="@+id/textView_rankings_title"
        app:srcCompat="@drawable/ic_trend_up"
        app:tint="?colorControlNormal" />

    <ImageView
        android:id="@+id/imageView_backup_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView_backup_subtitle"
        app:layout_constraintStart_toStartOf="@+id/imageView_rankings_icon"
        app:layout_constraintTop_toTopOf="@+id/textView_backup_title"
        app:srcCompat="@drawable/ic_cloud"
        app:tint="?colorControlNormal" />

    <ImageView
        android:id="@+id/imageView_help_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView_help_subtitle"
        app:layout_constraintStart_toStartOf="@+id/imageView_backup_icon"
        app:layout_constraintTop_toTopOf="@+id/textView_help_title"
        app:srcCompat="@drawable/ic_question"
        app:tint="?colorControlNormal" />

</androidx.constraintlayout.widget.ConstraintLayout>