<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/spacing_4"
    tools:context=".ui.home.CheckpointBottomSheet">

    <View
        android:id="@+id/view_divider"
        android:layout_width="@dimen/spacing_6"
        android:layout_height="@dimen/spacing_1_5"
        android:background="@drawable/round_corners_background_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_rate_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/rate_app_title"
        android:textSize="@dimen/text_xl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_divider" />

    <TextView
        android:id="@+id/textView_rate_content"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/rate_app_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_rate_title" />

    <Button
        android:id="@+id/button_rate_app"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/rate_the_app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_create_ticket"
        app:layout_constraintTop_toBottomOf="@+id/textView_rate_content" />

    <Button
        android:id="@+id/button_create_ticket"
        style="@style/Widget.Material3.Button.UnelevatedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/create_ticket"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_rate_app"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_rate_content" />

</androidx.constraintlayout.widget.ConstraintLayout>