<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.account.DeleteAccountFragment">

    <Button
        android:id="@+id/deleteButton"
        style="@style/Theme.Posture.Button"
        android:layout_width="@dimen/spacing_0"
        android:text="@string/action_delete_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/emailField"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_14"
        android:autofillHints="emailAddress"
        android:hint="@string/account_email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/deleteAccountAlert"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountRequirements"
        app:layout_constraintVertical_bias="0.4" />

    <TextView
        android:id="@+id/deleteAccountTitle"
        style="@style/Theme.Posture.MediumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_4"
        android:text="@string/action_delete_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/deleteAccountAlert"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_6"
        android:layout_marginBottom="@dimen/spacing_12"
        android:text="@string/delete_account_danger_alert"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deleteAccountRequirements"
        android:layout_width="@dimen/spacing_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_6"
        android:layout_marginTop="@dimen/spacing_10"
        android:text="@string/delete_account_email_required_alert"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountTitle" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/deleteAccountAnimation"
        android:layout_width="@dimen/spacing_52"
        android:layout_height="@dimen/spacing_52"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/deleteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deleteAccountTitle"
        app:lottie_autoPlay="false"
        app:lottie_rawRes="@raw/loading" />

</androidx.constraintlayout.widget.ConstraintLayout>