<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:layout_marginStart="@dimen/spacing_xxlarge"
        android:ems="4"
        android:text="@string/name_required"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/itemEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:ems="10"
        android:hint="@string/reminder_name_hint"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="textCapSentences"
        android:maxLength="25"
        android:paddingVertical="@dimen/spacing_standard"
        android:textColor="?android:textColorHint"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/itemName"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/openButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_xxlarge"
        android:contentDescription="@string/open_picker_content_description"
        app:tint="?colorControlNormal"
        android:src="@drawable/ic_caret_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider"
        style="@style/Theme.Posture.SlimDivider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xmicro"
        android:layout_marginHorizontal="@dimen/spacing_xxlarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>